--- a/ccwebgl/index.html
+++ b/ccwebgl/index.html
@@ -6,7 +6,7 @@
     <title>Unity WebGL Player | Contamination Control</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/ccontrol_wip.json");
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/ccwebgl.json");
     </script>
   </head>
   <body>
